# JustCef

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  DataSource.cs  DataStream.cs  DialogWindows.cs  DotCef.csproj  DotCefProcess.cs  DotCefWindow.cs  IPCRequest.cs  IPCResponse.cs  JustCef.csproj  JustCefProcess.cs  JustCefWindow.cs  LICENSE  Logger.cs  PacketReader.cs  PacketWriter.cs  RentedBuffer.cs  bufferpool.cc  bufferpool.h  bundle-osx.sh  datastream.cc  datastream.h  ensure-justcef-linux.sh  ensure-justcef-win.ps1  sign-dotcefnative.sh  sign-prebuilts.sh
Entitlements/: cef-helper-gpu.entitlements  cef.entitlements
Properties/PublishProfiles/: FolderProfile.pubxml  FolderProfile1.pubxml
cef/automate/: automate-git.py
cef/aws-linux-x64/: main.tf
cef/aws-linux-x64/scripts/: build-x64.sh  build.sh  clone-repos.sh  create-swap.sh  install-dependencies.sh
cef/aws-windows-x64/: main.tf
cef/aws-windows-x64/scripts/: build-arm64.bat  build-x64.bat  build.bat  setup.bat  wdk.vsconfig
cef/macos/scripts/: build-arm64.sh  build-x64.sh  build.sh  clone-repos.sh  install-dependencies.sh  setup.sh
cef/patches/: apply_cef_patches.py
cef/patches/cef/: 0001-file-paths.patch
cpp/: AsioSupport.h  AsyncSignal.h  CMakeLists.txt  DataStream.cpp  DataStream.h  Event.h  IpcTypes.h  JustCefLogger.cpp  JustCefLogger.h  JustCefProcess.cpp  JustCefProcess.h  JustCefWindow.cpp  JustCefWindow.h  Packet.h  WindowInternals.h
cpp/cmake/: EnsureJustCefRuntime.cmake  JustCefRuntime.cmake
cs/: DataSource.cs  IPCRequest.cs  IPCResponse.cs  JustCef.csproj  JustCefProcess.cs  PacketReader.cs  PacketWriter.cs  bundle-osx.sh  ensure-justcef-macos.sh  ensure-justcef-win.ps1  sign-justcefnative.sh
cs/Entitlements/: cef-helper-plugin.entitlements  cef-helper-renderer.entitlements
native/: CMakeLists.txt  Dockerfile  build-linux.sh  build-macos-arm64.sh  build-macos-x64.sh  build-windows.bat  clean.sh  create.sh  inspect.sh  terraform-builders.tf
native/cmake/: UnpackCEF.cmake
native/scripts/: build.sh  update.sh
native/src/: CMakeLists.txt  app_browser.cc  app_factory.h  app_other.cc  app_renderer.cc  bridge.cc  bridge.h  bufferpool.cc  bufferpool.h  client.cc  client.h  client_manager.cc  client_manager.h  client_util.cc  client_util.h  client_util_linux.cc  client_util_mac.mm  client_util_win.cc  datastream.cc  datastream.h  devtoolsclient.cc  devtoolsclient.h  ipc.cc  ipc.h  main.cc  main.h  main_linux.cc  main_mac.mm  main_util.cc  main_util.h  main_win.cc  packet_reader.h  packet_writer.h  pipe.cc  pipe.h  process_helper_mac.cc  process_helper_mac.h  process_helper_mac_minimal.cc  resource_util.cc  resource_util.h  (+10 more)
native/src/resources/mac/English.lproj/: InfoPlist.strings
native/src/resources/win/: shared.rc
native/toolchains/: macos-arm64.cmake  macos-x64.cmake
prebuilt/: .gitattributes  strip-linux.sh
prebuilt/linux-arm64/: chrome-sandbox  chrome_100_percent.pak  chrome_200_percent.pak  dotcefnative  libvulkan.so.1  resources.pak
prebuilt/linux-arm64/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
prebuilt/linux-x64/: chrome-sandbox  chrome_100_percent.pak  chrome_200_percent.pak  dotcefnative  libvulkan.so.1  resources.pak
prebuilt/linux-x64/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
prebuilt/osx-arm64/dotcefnative.app/Contents/: CodeResources  Info.plist
prebuilt/osx-arm64/dotcefnative.app/Contents/Frameworks/Chromium Embedded Framework.framework/: Chromium Embedded Framework
prebuilt/osx-arm64/dotcefnative.app/Contents/Frameworks/Chromium Embedded Framework.framework/Libraries/: libEGL.dylib  libGLESv2.dylib  libvk_swiftshader.dylib  vk_swiftshader_icd.json
prebuilt/osx-arm64/dotcefnative.app/Contents/Frameworks/Chromium Embedded Framework.framework/Resources/: Info.plist  chrome_100_percent.pak  chrome_200_percent.pak  resources.pak
prebuilt/osx-arm64/dotcefnative.app/Contents/Frameworks/Chromium Embedded Framework.framework/_CodeSignature/: CodeResources
prebuilt/osx-arm64/dotcefnative.app/Contents/Frameworks/dotcefnative Helper (Alerts).app/Contents/: Info.plist
prebuilt/osx-arm64/dotcefnative.app/Contents/Frameworks/dotcefnative Helper (GPU).app/Contents/: PkgInfo
prebuilt/osx-arm64/dotcefnative.app/Contents/Frameworks/dotcefnative Helper (Plugin).app/Contents/: Info.plist
prebuilt/osx-arm64/dotcefnative.app/Contents/MacOS/: dotcefnative
prebuilt/osx-arm64/dotcefnative.app/Contents/Resources/: Info.plist  shared.icns
prebuilt/osx-arm64/dotcefnative.app/Contents/_CodeSignature/: CodeResources
prebuilt/osx-x64/dotcefnative.app/Contents/: CodeResources  Info.plist
prebuilt/osx-x64/dotcefnative.app/Contents/Frameworks/Chromium Embedded Framework.framework/: Chromium Embedded Framework
prebuilt/osx-x64/dotcefnative.app/Contents/MacOS/: dotcefnative
prebuilt/osx-x64/dotcefnative.app/Contents/Resources/: Info.plist  InfoPlist.strings  MainMenu.xib
prebuilt/osx-x64/dotcefnative.app/Contents/_CodeSignature/: CodeResources
prebuilt/win-x64/: chrome_100_percent.pak  chrome_200_percent.pak  dotcefnative.exp  dotcefnative.lib  resources.pak
prebuilt/win-x64/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
(+100 files in other folders)
